# sip_qp

./: .bazelrc  .gitignore  LICENSE  MANIFEST.in  MODULE.bazel  README.md  pyproject.toml  setup.py
.github/: install_bazel.sh
.github/workflows/: pip.yml  wheels.yml
sip_qp/: BUILD.bazel  ordering.cpp  ordering.hpp  sip_qp.cpp  sip_qp.hpp  types.cpp  types.hpp
src/: BUILD.bazel  sip_qp_python.cpp
src/sip_qp_python/: __init__.py
tests/: BUILD.bazel  allocation_counter.cpp  allocation_counter.hpp  sip_qp_test.cpp  test_python_api.py
