[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sip_qp_python"
version = "0.0.2"
description = "Python bindings for the SIP quadratic-programming front-end."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Joao Sousa-Pinto", email = "joaospinto@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/joaospinto/sip_qp"
