load("@nanobind_bazel//:build_defs.bzl", "nanobind_extension", "nanobind_stubgen")

nanobind_extension(
    name = "sip_qp_python_ext",
    srcs = ["sip_qp_python.cpp"],
    deps = [
        "//sip_qp",
        "@eigen",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

nanobind_stubgen(
    name = "sip_qp_python_ext_stubgen",
    module = ":sip_qp_python_ext",
    marker_file = "src/py.typed",
    output_directory = "src",
    recursive = True,
)

py_library(
    name = "sip_qp_python",
    srcs = ["sip_qp_python/__init__.py"],
    data = [":sip_qp_python_ext"],
    visibility = ["//visibility:public"],
)
